--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -27,6 +27,12 @@ body {
   margin-right: 0.1em;
 }
 
+@media screen and (max-width: 767px) {
+  .Ctitle-wrapper {
+    left: 120px;
+  }
+}
+
 .con-wrapper {
   width: 100%;
   height: 100vh;
