--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -16,6 +16,12 @@
   margin-right: 0.1em;
 }
 
+@media screen and (max-width: 767px) {
+  .Stitle-wrapper {
+    left: 120px;
+  }
+}
+
 body {
   overflow-y: auto;
   min-width: 100%;
@@ -73,7 +79,7 @@ body {
 .Sbox-wrapper .frameworks .frontend {
   text-align: left;
   width: 350px;
-  height: 300px;
+  height: 330px;
   background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 1em;
@@ -86,8 +92,8 @@ body {
 .Sbox-wrapper .frameworks .frontend .s-line {
   position: absolute;
   width: 0.02em;
-  height: 40px;
-  top: 300px;
+  height: 30px;
+  top: 329px;
   left: 330px;
 }
 
@@ -193,8 +199,8 @@ body {
   opacity: .5;
   background-color: #dedede;
   position: absolute;
-  top: 53%;
-  left: -40.7%;
+  top: 123px;
+  left: -112px;
 }
 
 .Sbox-wrapper .frameworks .design .img-box {
@@ -230,7 +236,6 @@ body {
   }
   .Sbox-wrapper .frameworks .frontend {
     padding-left: 0;
-    padding-top: 1.5em;
     height: 300px;
   }
   .Sbox-wrapper .frameworks .frontend .img-box img {
@@ -247,6 +252,13 @@ body {
     margin-top: 300px;
     margin-left: -20%;
     transition: all .5s;
+    margin-bottom: 5em;
+  }
+  .Sbox-wrapper .frameworks .frameworks {
+    width: 70%;
+  }
+  .Sbox-wrapper .frameworks .frameworks .frontend, .Sbox-wrapper .frameworks .frameworks .backend, .Sbox-wrapper .frameworks .frameworks .tools, .Sbox-wrapper .frameworks .frameworks .design {
+    width: 70%;
   }
 }
 
